{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 25,
  "lineage": "0c9fb2da-913e-1288-e822-c74d57ff3bb7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557690584973:internet-gateway/igw-03d859701026210b6",
            "id": "igw-03d859701026210b6",
            "owner_id": "557690584973",
            "tags": {
              "Name": "devops-project-igw"
            },
            "tags_all": {
              "Name": "devops-project-igw"
            },
            "vpc_id": "vpc-0d0f0a351651dc1d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557690584973:route-table/rtb-0a8590896bfaab2bb",
            "id": "rtb-0a8590896bfaab2bb",
            "owner_id": "557690584973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d859701026210b6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-project-public-rt"
            },
            "tags_all": {
              "Name": "devops-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0f0a351651dc1d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557690584973:security-group/sg-031e436f60847d5e7",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031e436f60847d5e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-project-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "557690584973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-project-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "devops-project-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0f0a351651dc1d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557690584973:subnet/subnet-0a41442d319b42260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a41442d319b42260",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557690584973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-project-public-subnet"
            },
            "tags_all": {
              "Name": "devops-project-public-subnet"
            },
            "vpc_id": "vpc-0d0f0a351651dc1d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557690584973:subnet/subnet-001f4297026e6c082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001f4297026e6c082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557690584973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-project-public-subnet-az2"
            },
            "tags_all": {
              "Name": "devops-project-public-subnet-az2"
            },
            "vpc_id": "vpc-0d0f0a351651dc1d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557690584973:vpc/vpc-0d0f0a351651dc1d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce8cdb64ff9d27bf",
            "default_route_table_id": "rtb-09ba5b79412102b83",
            "default_security_group_id": "sg-04b70abd920c894dd",
            "dhcp_options_id": "dopt-09826292c5dc382f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0f0a351651dc1d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ba5b79412102b83",
            "owner_id": "557690584973",
            "tags": {
              "Name": "devops-project-vpc"
            },
            "tags_all": {
              "Name": "devops-project-vpc"
            }
          }
        }
      ]
    }
  ]
}